--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "classnames": "^2.5.1",
+    "i18next": "^23.10.1",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^15.0.0",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
